--- a/src/main/resources/templates/productsAdd.html
+++ b/src/main/resources/templates/productsAdd.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -30,7 +30,9 @@
                     <a class="nav-link" th:href="@{/admin}" href="#">admin-home</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" th:href="@{/logout}" href="#">logout</a>
+                    <form th:action="@{/logout}" method="post">
+                        <input type="submit" value="Logout" />
+                    </form>
                 </li>
 
             </ul>
@@ -40,7 +42,7 @@
 </nav>
 <div class="container">
     <h3>Add a new Product</h3>
-    <form th:action="@{/admin/products/add}" method="post" th:object="${productDTO}" th:object1="${categories}" enctype="multipart/form-data">
+    <form th:action="@{/admin/products/add}" method="post" th:object="${productDTO}" enctype="multipart/form-data">
         <div class="row">
             <div class="col-sm-5">
 
@@ -49,15 +51,13 @@
                     <label for="name">Name</label>
                     <input type="text" class="form-control" required th:field="*{name}" name="name" id="name"
                            placeholder="Enter name">
-
                 </div>
                 <div class="form-group">
                     <label for="category">Select Category</label>
-                    <select class="form-control" th:field="*{category_id}" id="category" name="category">
+                    <select class="form-control" th:field="*{categoryId}" id="category" name="category">
                         <option th:each="category :${categories}"
                                 th:value="${category.id}"
-                                th:text="${category.name}"
-                        >
+                                th:text="${category.name}">
                     </select>
                 </div>
                 <div class="form-group">
@@ -82,7 +82,7 @@
                     <label class="custom-file-label" for="productImage">Choose file</label>
                 </div>
                 <div class="form-group">
-                    <img src="#" id="imgPreview" height="100px" width="100px" th:src="@{${'/productImages/' + productDTO.imageName}}" style="margin-top: 20px" alt=" ">
+                    <img src="#" id="imgPreview" height="100px" width="100px" th:src="@{${'/images/' + productDTO.imageName}}" style="margin-top: 20px" alt=" ">
                 </div>
                 <input type="hidden" name="imgName" th:value="${productDTO.imageName}">
                 <button type="submit" class="btn btn-primary">Submit</button>
