--- a/src/main/resources/templates/orderPlaced.html
+++ b/src/main/resources/templates/orderPlaced.html
@@ -44,9 +44,6 @@
                 <li class="nav-item active">
                     <a class="nav-link" th:href="@{/cart}" href="#">cart</a>
                 </li>
-<!--                <li class="nav-item active">-->
-<!--                    <span class="nav-link" th:text="${cartCount}">0</span>-->
-<!--                </li>-->
             </ul>
 
         </div>
@@ -56,10 +53,6 @@
     <div class="row">
         <div class="well col-xs-10 col-sm-10 col-md-6 col-xs-offset-1 col-sm-offset-1 col-md-offset-3">
             <div class="row">
-                <div class="col-xs-6 col-sm-6 col-md-6">
-                    <strong th:text="${result}"></strong>
-                    <br>
-                </div>
                 <div class="col-xs-6 col-sm-6 col-md-6 text-right">
                     <p>
                         <em>Receipt #: 34522677W</em>
@@ -78,11 +71,8 @@
                     </tr>
                     </thead>
                     <tbody>
-
-                    <tr th:each="entry : ${parameters}">
-
-                        <td th:text="${entry.key} + '  : -  ' + ${entry.value}"></td>
-
+                    <tr th:each="cart : ${cartSet.entrySet()}">
+                        <td th:text="${cart.key.name} + '  : -  ' + ${cart.value}"></td>
                     </tr>
                     </tbody>
                 </table>
