--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -55,14 +55,24 @@
 <div class="container" style="margin-top: 30px">
     <div class="row">
         <div class="col-sm-3">
-            <h4>Categories</h4>
-            <ul class="list-group">
-                <a th:href="@{/shop}"><li class="list-group-item">All Products</li></a>
-                <a href="" th:each="category, iStat : ${categories}"
-                   th:href="@{/shop/category/{id}(id=${category.id})}"><li
-                               class="list-group-item" th:text="${category.name}"></li></a>
-
-            </ul>
+            <h4>Filters</h4>
+            <form th:action="@{/shop/filter}" method="get">
+                <label for="minPrice">Min Price:</label>
+                <input type="number" id="minPrice" name="minPrice" />
+                <label for="maxPrice">Max Price:</label>
+                <input type="number" id="maxPrice" name="maxPrice" />
+                <label for="category">Category:</label>
+                <select id="category" name="category">
+                    <option value="">All Categories</option>
+                    <th th:each="category : ${categories}">
+                        <option th:value="${category.id}" th:text="${category.name}"></option>
+                    </th>
+                </select>
+                <input type="submit" value="Apply Filters" />
+            </form>
+            <form th:action="@{/shop}" method="get">
+                <input type="submit" value="Reset" />
+            </form>
         </div>
         <div class="col-sm-9">
             <div class="card" style="margin-top: 20px" th:each="product : ${products}">
