--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -3,90 +3,123 @@
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
-          integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="css/home.css">
+    <title>Products</title>
 </head>
 <body>
 
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light" >
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-            <img th:src="@{/images/logo.png}"  src="../static/images/logo.png" width="auto" height="40" class="d-inline-block align-top" alt=""/>
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto"></ul>
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" th:href="@{/}" href="#">home</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" th:href="@{/shop}" href="#">shop</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" sec:authorize="isAnonymous()" th:href="@{/login}" href="#">login</a>
-                </li>
-                <li class="nav-item active">
-                    <form th:action="@{/logout}" method="post">
-                        <input type="submit" value="Logout" />
-                    </form>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" th:href="@{/cart}" href="#">cart</a>
-                </li>
-                <li class="nav-item active">
-                    <span class="nav-link" th:text="${cartCount}">0</span>
-                </li>
-            </ul>
-
-        </div>
+<div class="sidebar close">
+    <div class="logo-details">
+        <i class='bx bxl-java' ></i>
+        <span class="logo_name">ITech</span>
     </div>
-</nav>
-<div class="container" style="margin-top: 30px">
-    <div class="row">
-        <div class="col-sm-3">
-            <h4>Filters</h4>
-            <form th:action="@{/shop/filter}" method="get">
-                <label for="minPrice">Min Price:</label>
-                <input type="number" id="minPrice" name="minPrice" />
-                <label for="maxPrice">Max Price:</label>
-                <input type="number" id="maxPrice" name="maxPrice" />
-                <label for="category">Category:</label>
-                <select id="category" name="category">
-                    <option value="">All Categories</option>
-                    <th th:each="category : ${categories}">
-                        <option th:value="${category.id}" th:text="${category.name}"></option>
-                    </th>
-                </select>
-                <input type="submit" value="Apply Filters" />
-            </form>
-            <form th:action="@{/shop}" method="get">
-                <input type="submit" value="Reset" />
-            </form>
-        </div>
-        <div class="col-sm-9">
-            <div class="card" style="margin-top: 20px" th:each="product : ${products}">
-                <div class="row no-gutters">
-                    <div class="col-sm-5 d-flex justify-content-center">
-                        <img class="" height="150px" width="150px" th:src="@{${'/images/' + product.imageName}}" th:alt="${product.name}">
-                    </div>
-                    <div class="col-sm-7 d-flex justify-content-center">
-                        <div class="card-body">
-                            <h5 class="card-title" th:text="${product.name}"></h5>
-                            <h4>USD <span th:text="${product.price}"></span></h4>
-                            <p th:text="${product.description}"></p>
-                            <a href="#" th:href="@{/shop/viewproduct/{id}(id=${product.id})}" class="btn btn-primary">View Product</a>
-                        </div>
+    <ul class="nav-links">
+        <li>
+            <a href="#">
+                <i class='bx bx-menu'></i>
+                <span class="link_name">Menu</span>
+            </a>
+            <ul class="sub-menu blank">
+                <li><a class="link_name" href="#">Menu</a></li>
+            </ul>
+        </li>
+        <li>
+            <a href="#" th:href="@{/}">
+                <i class='bx bx-grid-alt' ></i>
+                <span class="link_name">Home</span>
+            </a>
+            <ul class="sub-menu blank">
+                <li><a class="link_name" th:href="@{/}">Home</a></li>
+            </ul>
+        </li>
+        <li>
+            <div class="iocn-link">
+                <a href="#">
+                    <i class='bx bx-collection' ></i>
+                    <span class="link_name">Category</span>
+                </a>
+                <i class='bx bxs-chevron-down arrow' ></i>
+            </div>
+            <ul class="sub-menu">
+                <li><a class="link_name" href="#">Category</a></li>
+                <li><a href="#">HTML & CSS</a></li>
+                <li><a href="#">JavaScript</a></li>
+                <li><a href="#">PHP & MySQL</a></li>
+            </ul>
+        </li>
+        <li>
+            <a href="#" th:href="@{/shop}">
+                <i class='bx bx-laptop' ></i>
+                <span class="link_name">Products</span>
+            </a>
+            <ul class="sub-menu blank">
+                <li><a class="link_name" th:href="@{/shop}" href="#" >Products</a></li>
+            </ul>
+        </li>
+        <li>
+            <a href="#" th:href="@{/cart}">
+                <i class='bx bx-cart-alt'></i>
+                <span class="link_name">Cart <span class="cart-count" th:text="${cartItemCount}"></span></span>
+            </a>
+            <ul class="sub-menu blank">
+                <li><a class="link_name" th:href="@{/cart}" href="#">Cart</a></li>
+            </ul>
+        </li>
+        <li>
+            <a href="#" th:href="@{/logout}" th:action="@{/logout}" th:method="post">
+                <i class='bx bx-log-out' style="color: rgb(255, 0, 0);"></i>
+                <span class="link_name logout-link" style="color: rgb(255, 0, 0);">LogIn/Out</span>
+            </a>
+            <ul class="sub-menu blank">
+                <li><a class="link_name" href="#" th:href="@{/logout}" th:action="@{/logout}" th:method="post">LogIn/Out</a></li>
+            </ul>
+        </li>
+    </ul>
+</div>
+<div class="search-bar">
+    <input type="text" id="searchInput" placeholder="Search by name..." />
+    <button onclick="searchProducts()">Search</button>
+</div>
+<section class="filters">
+    <h2>Filters</h2>
+    <form th:action="@{/shop/filter}" th:object="${filters}" method="get">
+        <label for="minPrice">Min Price:</label>
+        <input type="number" id="minPrice" th:field="*{minPrice}" />
+        <label for="maxPrice">Max Price:</label>
+        <input type="number" id="maxPrice" th:field="*{maxPrice}" />
+        <label for="category">Category:</label>
+        <select id="category" th:field="*{categoryId}">
+            <option th:value="0">All Categories</option>
+            <th:block th:each="category : ${categories}">
+                <option th:value="${category.id}" th:text="${category.name}"></option>
+            </th:block>
+        </select>
+        <input type="submit" value="Apply Filters" />
+    </form>
+    <form th:action="@{/shop}" method="get">
+        <input type="submit" value="Reset" class="reset-button"/>
+    </form>
+</section>
+
+    <div class="container">
+        <div class="card" th:each="product : ${products}">
+            <div class="imgBx">
+                <img class="product-image" th:src="@{${'/images/' + product.imageName}}" th:alt="${product.name}" />
+            </div>
+            <div class="contentBx">
+                <h2 th:text="${product.name}" id="product-name"></h2>
+                <div class="size">
+                    <h3>Price:</h3><h3 th:text="${product.price}"></h3>
+                    <h4>Price Opt:</h4> <h4 th:text="${product.priceOpt}"></h4>
+                    <div class="button-container">
+                        <button>
+
+                        </button>
                     </div>
                 </div>
             </div>
@@ -94,12 +127,33 @@
     </div>
 </div>
 
+<script>
+    let arrow = document.querySelectorAll(".arrow");
+    for (var i = 0; i < arrow.length; i++) {
+        arrow[i].addEventListener("click", (e)=>{
+            let arrowParent = e.target.parentElement.parentElement;//selecting main parent of arrow
+            arrowParent.classList.toggle("showMenu");
+        });
+    }
+    let sidebar = document.querySelector(".sidebar");
+    let sidebarBtn = document.querySelector(".bx-menu");
+    console.log(sidebarBtn);
+    sidebarBtn.addEventListener("click", ()=>{
+        sidebar.classList.toggle("close");
+    });
+    function searchProducts() {
+        const searchTerm = document.getElementById("searchInput").value.toLowerCase();
+        const productCards = document.querySelectorAll(".card");
 
-
-
-
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+        productCards.forEach(card => {
+            const title = card.querySelector("#product-name").textContent.toLowerCase();
+            if (title.includes(searchTerm)) {
+                card.style.display = "block";
+            } else {
+                card.style.display = "none";
+            }
+        })
+    }
+</script>
 </body>
 </html>
