--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -1,18 +1,32 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
+}
+body {
+    margin-left: 60px;
+    margin-top: 50px;
+    background-color: #c5cdfd;
+    background: linear-gradient(to right, #e2e2e2, #c5cdfd);
+}
+
 .container {
     display: flex;
     flex-direction: row; /* Display cards in a row */
     flex-wrap: wrap;
     justify-content: center;
-    gap: 100px;
+    gap: 60px;
 }
 
 .card {
     position: relative;
     width: 320px;
     height: 450px;
-    background: #459A7F;
+    background-color: #01616f;
+    background: linear-gradient(to right, #009292, #016675);
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.1);
@@ -24,7 +38,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: #00C890;
+    background: #00c4ad;
     clip-path: circle(150px at 80% 20%);
     transition: 0.5s ease-out;
 }
@@ -32,20 +46,20 @@
     clip-path: circle(300px at 80% -20%);
 }
 .card::after {
-    content: 'KhPI';
+    content: 'ITech';
     position: absolute;
     top: 30%;
     left: -10%;
-    font-size: 10em;
+    font-size: 8em;
     font-weight: 800;
     font-style: italic;
-    color: rgb(30, 120, 95);
+    color: rgb(1, 100, 115);
 }
 .card .imgBx {
     position: absolute;
     top: 35%;
     transform: translateY(-50%);
-    z-index: 1000;
+    z-index: 90;
     width: 105%;
     height: 230px;
     transition: 0.5s;
@@ -66,7 +80,6 @@
     bottom: 0;
     width: 100%;
     height: 100px;
-    text-align: center;
     transition: 1s;
     z-index: 10;
 }
@@ -119,12 +132,52 @@
     margin-right: 10px;
 }
 
+.card .contentBx .prod_name {
+    display: flex;
+    align-items: center;
+    margin-left: 20px;
+}
+
+.card .contentBx .price {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end; /* Move the price to the right */
+    margin-top: 10px; /* Add some top margin for spacing */
+    margin-right: 20px;
+}
+
+.card .contentBx .price h4 {
+    font-weight: 600;
+    font-size: 17px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #a0d1fd;
+    margin-right: 5px;
+}
+
+.card .contentBx .price h3 {
+    font-weight: 600;
+    font-size: 24px;
+    color: #a0d1fd;
+    margin: 0;
+}
+
+.card .contentBx .size h4,
+.card .contentBx .color h4 {
+    color: #dadada;
+    font-weight: 300;
+    font-size: 20px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    margin-right: 10px;
+}
+
 .card .contentBx .size span {
     width: 26px;
     height: 26px;
     text-align: center;
     line-height: 26px;
-    font-size: 14px;
+    font-size: 20px;
     display: inline-block;
     color: #c0f6eb;
     background: #fff;
@@ -209,65 +262,6 @@
     transition-delay: 0.25s; /* Исправлено: задержка анимации */
 }
 
-.filters {
-    background-color: #84B7FE;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    width: 80%; /* Adjust the width as needed */
-    margin: 0 auto;
-    margin-bottom: 20px;
-}
-
-/* Filter Title Styles */
-.filters h2 {
-    color: #258BD6;
-    font-size: 20px;
-    margin-bottom: 10px;
-}
-
-/* Form Styles */
-.filters form {
-    margin-top: 10px;
-}
-
-.filters label {
-    color: #258BD6;
-    display: block;
-    margin-bottom: 5px;
-}
-
-.filters input[type="number"],
-.filters select {
-    width: 100%;
-    padding: 8px;
-    border: 1px solid #258BD6;
-    border-radius: 4px;
-    margin-bottom: 10px;
-    font-size: 16px;
-}
-
-.filters input[type="number"]:focus,
-.filters select:focus {
-    outline: none;
-    border-color: #84B7FE;
-}
-
-.filters input[type="submit"],
-.filters .reset-button {
-    background-color: #258BD6;
-    color: #fff;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 16px;
-}
-
-.filters input[type="submit"]:hover,
-.filters .reset-button:hover {
-    background-color: #84B7FE;
-}
 
 label {
     font-weight: bold;
@@ -276,6 +270,93 @@ label {
     margin-bottom: 5px;
 }
 
+/* Общий контейнер для фильтров */
+.filters {
+    float: right;
+    background-color: #258ad5;
+    background: linear-gradient(to left, #258ad5, #0f6bab);
+    padding: 15px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 400px; /* Регулируйте ширину по своему усмотрению */
+    height: 450px;
+    margin-right: 40px;
+}
+
+/* Заголовок "Filters" */
+.filters h2 {
+    font-size: 18px;
+    margin-top: 0;
+    color: #fdfdfd;
+}
+
+/* Стили для инпутов и лейблов */
+.filters label {
+    display: block;
+    font-size: 14px;
+    color: #ffffff;
+    margin-top: 10px;
+}
+
+.filters input[type="number"],
+.filters select {
+    width: 100%;
+    padding: 8px;
+    margin: 5px 0;
+    border: 1px solid #062a6f;
+    border-radius: 3px;
+    font-size: 14px;
+    background-color: #a0d1fd;
+}
+
+
+/* Стили для кнопок */
+.filters input[type="submit"] {
+    background-color: #062a6f; /* Цвет фона кнопки */
+    color: #fff; /* Цвет текста кнопки */
+    padding: 10px 15px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 14px;
+    margin-top: 10px;
+}
+
+.reset-button {
+    background-color: #c54327; /* Цвет фона кнопки Reset */
+    color: #fff; /* Цвет текста кнопки Reset */
+    padding: 10px 15px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 14px;
+    margin-top: 10px;
+}
+
+/* Стили для поисковой кнопки */
+.search-bar button {
+    background-color: #062a6f; /* Цвет фона кнопки поиска */
+    color: #fff; /* Цвет текста кнопки поиска */
+    padding: 10px 15px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 14px;
+}
+
+/* Отступы и выравнивание текстовых полей */
+.search-bar input[type="text"] {
+    padding: 8px;
+    margin-right: 10px;
+    width: 75%; /* Регулируйте ширину по своему усмотрению */
+}
+
+/* Выравнивание элементов в поисковой строке */
+.search-bar {
+    display: flex;
+    align-items: center;
+    margin-bottom: 15px;
+}
 
 .sidebar{
     font-family: 'Montserrat', sans-serif;
@@ -284,12 +365,15 @@ label {
     left: 0;
     height: 100%;
     width: 260px;
-    background: #009393;
+    background-color: #017485;
+    background: linear-gradient(to right, #009292, #017b8d);
     z-index: 100;
     transition: all 0.5s ease;
+    box-shadow: 5px 0 15px rgba(0, 0, 0, 0.2);
 }
 .sidebar.close{
     width: 78px;
+    box-shadow: 5px 0 15px rgba(0, 0, 0, 0.2);
 }
 .sidebar .logo-details{
     height: 50px;
