--- a/src/main/resources/static/css/sidebar.css
+++ b/src/main/resources/static/css/sidebar.css
@@ -7,12 +7,15 @@
     left: 0;
     height: 100%;
     width: 260px;
-    background: #009393;
+    background-color: #017485;
+    background: linear-gradient(to right, #009292, #017b8d);
     z-index: 100;
     transition: all 0.5s ease;
+    box-shadow: 5px 0 15px rgba(0, 0, 0, 0.2);
 }
 .sidebar.close{
     width: 78px;
+    box-shadow: 5px 0 15px rgba(0, 0, 0, 0.2);
 }
 .sidebar .logo-details{
     height: 50px;
